[gd_scene load_steps=12 format=2]

[ext_resource path="res://asset/light.png" type="Texture" id=1]
[ext_resource path="res://asset/oak_woods_v1.0/decorations/shop_anim.png" type="Texture" id=2]
[ext_resource path="res://src/Npc/Npc.tscn" type="PackedScene" id=3]
[ext_resource path="res://asset/fonts/small-ui-font.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/Levels/Shop.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47, 35.75 )

[sub_resource type="Animation" id=5]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( -78, 58 ), Vector2( -78, 63 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "?" ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -20, 55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "?" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Tugas"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -77, 55 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Aku sangat mengantuk", "Apakah kamu mempunyai kopi yang bisa kubeli?
" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.6, 1.7, 1.99354, 2.9, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0, 0.0, 1.0, 1.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_showbutton"
} ]
}

[node name="Shop" type="Area2D"]
collision_layer = 0
script = ExtResource( 6 )

[node name="Popup" type="Popup" parent="."]
margin_left = 114.0
margin_top = 45.0
margin_right = 178.0
margin_bottom = 101.0

[node name="Panel" type="Panel" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Popup/Panel/VBoxContainer"]
margin_right = 64.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Sell"

[node name="Button2" type="Button" parent="Popup/Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 64.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 4 )
text = "Return"

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 82.25 )
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -96, 71 )
texture = ExtResource( 1 )
color = Color( 1, 0.835484, 0.652344, 1 )
energy = 1.4

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 97, 74 )
texture = ExtResource( 1 )
color = Color( 1, 0.835484, 0.652344, 1 )
energy = 1.4

[node name="Label" type="Label" parent="."]
margin_left = -20.0
margin_top = 55.0
margin_right = 132.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 4 )
text = "?"
align = 1

[node name="Test1" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 84 )
conditions = {
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Tugas = SubResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Shop_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Shop_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Shop_mouse_entered"]
[connection signal="pressed" from="Popup/Panel/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
